# combustache

./: .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  lint.yaml  publish.yaml  test.yaml
src/combustache/: __init__.py  __main__.py  ctx.py  exceptions.py  main.py  render.py  util.py
src/combustache/nodes/: __init__.py  comment.py  delimiter.py  inheritance.py  interpolation.py  node.py  partial.py  section.py
tests/: conftest.py
tests/custom/: conftest.py  indexing.yml  test_bad_template.py  test_cli.py  test_misc.py  test_opts.py
