[project]
name = 'combustache'
readme = 'README.md'
description = 'Mustache v1.4 implementation with lambdas.'
license = 'MIT'
requires-python = ">= 3.10"
dependencies = []
dynamic = ['version']
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Libraries',
  'Topic :: Text Processing',
  'Typing :: Typed',
]

[project.optional-dependencies]
dev = ['ruff', 'pyyaml', 'pytest']

[project.urls]
Homepage = 'https://github.com/sakhezech/combustache'

[project.scripts]
combustache = 'combustache.__main__:cli'

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.hatch.version]
path = 'src/combustache/__version__.py'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
